--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,11 @@ android {
     }
 }
 
+repositories{
+    mavenCentral()
+    mavenLocal()
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -25,4 +30,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.github.markushi:circlebutton:1.1'
 }
